final touchup done 3

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     .logo .logo-image {
       width: 30px;
       height: 30px;
-      background-color: #f5faff; /* Placeholder background */
+      background-color: #f5faff; 
       margin-right: 5px;
     }
 
@@ -168,7 +168,7 @@
 
     .lover {
     display: flex;
-    align-items: center; /* Aligns image and text to start at the same line */
+    align-items: center; 
     padding: 50px;
     background-color: #fff;
     margin: 20px;
@@ -176,12 +176,12 @@
   }
   .lover .text {
     width: 50%;
-    margin-left: 30px; /* Gap between image and text, matching the picture */
+    margin-left: 30px;
   }
   .lover .text h2 {
     color: black;
     font-size: 2em;
-    margin-top: 0; /* Ensures text aligns with image top */
+    margin-top: 0; 
   }
   .lover .image {
     width: 50%;
@@ -199,7 +199,7 @@
       width: 100%;
     }
     .lover .text {
-      margin-left: 0; /* Reset margin on mobile */
+      margin-left: 0; 
     }
     .lover .badge {
       display: none;
@@ -209,9 +209,9 @@
       position: absolute;
       top: 10px;
       right: 10px;
-      width: 100px; /* Placeholder width */
-      height: 30px; /* Placeholder height */
-      background-color: #ffd700; /* Placeholder background */
+      width: 100px; 
+      height: 30px; 
+      background-color: #ffd700; 
       padding: 5px 10px;
       border-radius: 5px;
       color: #000;
@@ -397,7 +397,7 @@
     .footer-left .logo .logo-image {
       width: 30px;
       height: 30px;
-      background-color: #f5faff; /* Placeholder background */
+      background-color: #f5faff; 
       margin-right: 5px;
     }
 
