image problem solved

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
   display: grid;
   grid-template-rows: 1fr;
   justify-content: center;
+  
 }
 
 .deal-card {
@@ -560,7 +561,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="/images/logo.png" alt="Faugel Logo">
+      <img src="./images/logo.png" alt="Faugel Logo">
     </div>
     <nav>
       <ul>
@@ -578,7 +579,7 @@
       <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
     </div>
     <div class="banner-image">
-      <img src="/images/hero-flower.png" alt="Flower Bouquet">
+      <img src="./images/hero-flower.png" alt="Flower Bouquet">
     </div>
   </section>
 
@@ -587,35 +588,35 @@
     <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
     <div class="plants-grid">
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
       <div class="plant-card">
-        <img src="/images/sample-flower-image.png" alt="Lily Blossom">
+        <img src="./images/sample-flower-image.png" alt="Lily Blossom">
         <p>Lily Blossom<br>20 USD<br><button class="add-to-cart">Add to Cart</button></p>
       </div>
     </div>
@@ -623,8 +624,8 @@
 
   <div class="lover">
   <div class="image">
-    <img src="/images/flower-store.png" alt="Plants Lover">
-    <div class="badge" style="position: absolute; z-index:1;top:10px; right: 10px; background: url('/images/trusted-badge.png') no-repeat; width: 215px; height: 215px; background-size: contain;"></div>
+    <img src="./images/flower-store.png" alt="Plants Lover">
+    <div class="badge" style="position: absolute; z-index:1;top:10px; right: 10px; background: url('./images/trusted-badge.png') no-repeat; width: 215px; height: 215px; background-size: contain;"></div>
   </div>
   <div class="text">
     <h2>Flower & Plants Lover</h2>
@@ -643,19 +644,19 @@
   <div class="deal-cards">
     <div class="left-column">
       <div class="deal-card">
-        <img src="/images/deal-bloom.png" alt="Bloom Plant">
+        <img src="./images/deal-bloom.png" alt="Bloom Plant">
         <p>60% Off | Bloom Plant</p>
         <a href="#">Shop Now</a>
       </div>
       <div class="deal-card">
-        <img src="/images/deal-ana.png" alt="Ana Plant">
+        <img src="./images/deal-ana.png" alt="Ana Plant">
         <p>30% Off | Ana Plant</p>
         <a href="#">Shop Now</a>
       </div>
     </div>
     <div class="right-column">
       <div class="deal-card">
-        <img src="/images/deal-zabo.png" alt="Zabo Plant">
+        <img src="./images/deal-zabo.png" alt="Zabo Plant">
         <p>25% Off | Zabo Plant</p>
         <a href="#">Shop Now</a>
       </div>
@@ -675,7 +676,7 @@
   <footer>
     <div class="footer-left">
       <div class="logo">
-        <img src="/images/logo.png" alt="Faugel Logo">
+        <img src="./images/logo.png" alt="Faugel Logo">
       </div>
       <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
     </div>
@@ -693,10 +694,10 @@
         <a href="#">Blog</a>
       </div>
       <div class="social">
-        <a href="#"><img src="/images/icon-linkedin.png" alt="LinkedIn"></a>
-        <a href="#"><img src="/images/icon-twitter.png" alt="Twitter"></a>
-        <a href="#"><img src="/images/icon-facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="/images/icon-youtube.png" alt="Youtube"></a>
+        <a href="#"><img src="./images/icon-linkedin.png" alt="LinkedIn"></a>
+        <a href="#"><img src="./images/icon-twitter.png" alt="Twitter"></a>
+        <a href="#"><img src="./images/icon-facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="./images/icon-youtube.png" alt="Youtube"></a>
         
       
       </div>
