--- a/index.html
+++ b/index.html
@@ -331,13 +331,13 @@
 
     .join-section {
       padding: 60px 40px;
-      width: 1600px;
+      width: 1540px;
       height: 400px;
       text-align: center;
       color: #fff;
       background-size: cover;
-      
-      background-image: url('/images/news-letter-bg.png');
+      justify-content: center;
+      background-image: url('./images/news-letter-bg.png');
     }
 
     .join-section h2 {
