--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 .deal-cards .right-column {
   display: grid;
   grid-template-rows: 1fr;
-  justify-content: center;
+  align-content: center;
   
 }
 
@@ -331,12 +331,12 @@
 
     .join-section {
       padding: 60px 40px;
-      width: 1540px;
+      width: 1140px;
       height: 400px;
       text-align: center;
       color: #fff;
       background-size: cover;
-      justify-content: center;
+      align-content: center;
       background-image: url('./images/news-letter-bg.png');
     }
 
